--- a/css/style.css
+++ b/css/style.css
@@ -12,31 +12,22 @@ abbr[title],dfn[title]{border-bottom:1px dotted;cursor:help;}
 table{border-collapse:collapse;border-spacing:0;}
 hr{display:block;height:1px;border:0;border-top:1px solid #ccc;margin:1em 0;padding:0;clear:both;}
 input,select{vertical-align:middle;}
-body{line-height:1.2857142857142858em;font-size:87.5%;font-family:Arial,sans-serif;}
+body{font-family:Palatino,'Palatino Linotype','Book Antiqua',FreeSerif,Gerogia,serif;}
 h1,h2,h3,h4,h5,h6,strong{font-weight:bold;}
-.gigantic{font-size:20em;line-height:0.9642857142857144em;}
-h1,.huge{font-size:5em;line-height:1.0285714285714287em;}h1 small,.huge small{font-size:0.5em;line-height:normal;}
-h2,.large{font-size:4em;line-height:0.9642857142857144em;}h2 small,.large small{font-size:0.5em;line-height:normal;}
-h3,.bigger{font-size:3em;line-height:0.8571428571428572em;}h3 small,.bigger small{font-size:0.6em;line-height:normal;}
-h4,.big{font-size:2em;line-height:0.9642857142857144em;}h4 small,.big small{font-size:0.6em;line-height:normal;}
-h5,.strong,strong{font-size:1.2em;line-height:0.2678571428571429em;}h5 small,.strong small,strong small{font-size:0.6em;line-height:normal;}
-h6,.small,p{font-size:1em;line-height:1.2857142857142858em;color:#444;}h6 small,.small small,p small{font-size:0.6em;line-height:normal;}
-.tiny{font-size:0.9em;padding:0.28571428571428575em 0;}.tiny small{font-size:0.6em;line-height:normal;}
+.huge{font-size:14em;line-height:0.89em;}
+h1,.h1{font-size:4.25em;line-height:1.14em;}
+h2,.h2{font-size:2.62em;line-height:1.24em;}
+h3,.h3{font-size:2.15em;line-height:1.2em;}
+h4,.h4{font-size:1.63em;line-height:1.4em;}
+h5,.h5{font-size:1.4em;line-height:1.3em;}
+h6,.h6,p{font-size:1em;line-height:1.7em;}
+small{font-size:0.625em;}
 p{word-wrap:break-word;}
 i,em{font-style:italic;}
 a{text-decoration:none;}
-sup{font-size:xx-small;vertical-align:text-top;margin:-8px 6px;}
-sub{font-size:xx-small;vertical-align:text-bottom;margin:-8px 6px;}
-h1,h2,h3,h4,h5,h6,p,ul,ol,pre,blockquote,textarea,button,.gigantic,.huge,.large,.bigger,.big,.strong,.small{margin:5px 0 15px;}
-hgroup.coudal h1{font-family:times,Times New Roman,times-roman,georgia,serif;color:#444;margin:0;padding:0px 0px 6px 0px;font-size:51px;line-height:44px;letter-spacing:-2px;font-weight:bold;}
-hgroup.coudal h2{font-family:Gill Sans, Verdana;font-size:11px;line-height:14px;text-transform:uppercase;letter-spacing:2px;font-weight:bold;margin:0;}
-hgroup.timoni h1{font-size:12px;font-family:Georgia,'Times New Roman',serif;color:#000;text-align:center;font-weight:100;}
-hgroup.timoni h2{font-family:'Hoefler Text',Georgia,'Times New Roman',serif;font-weight:normal;font-size:1.75em;letter-spacing:.2em;line-height:1.1em;margin:0px;text-align:center;text-transform:uppercase;}
-hgroup.ale h1{font-family:Georgia,"Times New Roman",Times,serif;font-size:24px;margin-top:5px;margin-bottom:0px;text-align:center;font-weight:normal;color:#222;}
-hgroup.ale h2{font-family:"Lucida Grande",Tahoma;font-size:10px;font-weight:lighter;font-variant:normal;text-transform:uppercase;color:#666666;margin-top:6px;text-align:center!important;letter-spacing:0.3em;}
-hgroup.noob h1{font-size:85%;text-transform:uppercase;letter-spacing:1px;color:#bbb;font-size:10px;font-family:"Lucida Grande",Verdana,Helvetica,Arial,sans-serif;font-weight:100;float:right;clear:both;margin:0;}
-hgroup.noob h2{font:bold 34px "Century Schoolbook",Georgia,Times,serif;color:#333;line-height:90%;margin:.2em 0 .4em 0;letter-spacing:-2px;float:right;clear:both;}
-hgroup.noob h3{color:#76879b;font-size:10px;margin:0 5px 5px 5px;font-family:"Lucida Grande",Verdana,Helvetica,Arial,sans-serif;font-size:11px;clear:both;text-align:right;line-height:3px;}
+sup{font-size:xx-small;vertical-align:text-top;margin:0px 2px;}
+sub{font-size:xx-small;vertical-align:text-bottom;margin:0px 2px;}
+h1,h2,h3,h4,h5,h6,i,em,ap,ul,ol,pre,blockquote,textarea,button,strong,small,.huge,.h1,.h2,.h3,.h4,.h5,.h6{margin:5px 0 15px;}
 p.twisted{color:#424242;font-family:"Adobe Caslon Pro","Hoefler Text",Georgia,Garamond,Times,serif;letter-spacing:0.1em;text-align:center;margin:40px auto;text-transform:lowercase;line-height:145%;font-size:14pt;font-variant:small-caps;}p.twisted:first-letter{text-transform:uppercase;}
 .dropcap:first-letter{float:left;font-size:75px;line-height:60px;padding-top:4px;padding-right:8px;padding-left:3px;font-family:Georgia;}
 p.press{background:#474747;color:#222;padding:10px;text-shadow:0 2px 3px #555555;}
@@ -95,8 +86,8 @@ textarea{line-height:1.25;text-align:left;}
 .alert.info a{color:#205791;}
 form div.error{background:#fbe3e4;color:#8a1f11;padding:0.7em;margin-bottom:1em;-webkit-background-clip:padding-box;-webkit-border-radius:4px;-moz-background-clip:padding-box;-moz-border-radius:4px;border-radius:4px;background-clip:padding-box;text-shadow:#cccccc 0 1px 0 #555555;}
 .help{width:100%;margin:3px 0;color:#bfbfbf;display:block;font-size:0.9em;}
-table{margin:5% auto 0;color:#555555;}table tr:nth-child(odd) td{background-color:#f6f6f6;}
-table tr:hover td{background-color:#f9f9f9;}
+table.line{margin:5% auto 0;color:#555555;}table.line tr:nth-child(odd) td{background-color:#f6f6f6;}
+table.line tr:hover td{background-color:#f9f9f9;}
 caption,th,td{text-align:left;vertical-align:top;}
 caption{padding-bottom:1em;text-align:center;}
 th,td{padding:10px 28px;text-align:center;}
@@ -230,6 +221,15 @@ body{-webkit-tap-highlight-color:#ffff9e;}
 .p13{margin-left:111.14999999999999%;}
 .p14{margin-left:119.69999999999999%;}
 .p15{margin-left:128.24999999999997%;}
+hgroup.coudal h1{font-family:times,Times New Roman,times-roman,georgia,serif;color:#444;margin:0;padding:0px 0px 6px 0px;font-size:51px;line-height:44px;letter-spacing:-2px;font-weight:bold;}
+hgroup.coudal h2{font-family:Gill Sans, Verdana;font-size:11px;line-height:14px;text-transform:uppercase;letter-spacing:2px;font-weight:bold;margin:0;}
+hgroup.timoni h1{font-size:12px;font-family:Georgia,'Times New Roman',serif;color:#000;text-align:center;font-weight:100;}
+hgroup.timoni h2{font-family:'Hoefler Text',Georgia,'Times New Roman',serif;font-weight:normal;font-size:1.75em;letter-spacing:.2em;line-height:1.1em;margin:0px;text-align:center;text-transform:uppercase;}
+hgroup.ale h1{font-family:Georgia,"Times New Roman",Times,serif;font-size:24px;margin-top:5px;margin-bottom:0px;text-align:center;font-weight:normal;color:#222;}
+hgroup.ale h2{font-family:"Lucida Grande",Tahoma;font-size:10px;font-weight:lighter;font-variant:normal;text-transform:uppercase;color:#666666;margin-top:6px;text-align:center!important;letter-spacing:0.3em;}
+hgroup.noob h1{font-size:85%;text-transform:uppercase;letter-spacing:1px;color:#bbb;font-size:10px;font-family:"Lucida Grande",Verdana,Helvetica,Arial,sans-serif;font-weight:100;float:right;clear:both;margin:0;}
+hgroup.noob h2{font:bold 34px "Century Schoolbook",Georgia,Times,serif;color:#333;line-height:90%;margin:.2em 0 .4em 0;letter-spacing:-2px;float:right;clear:both;}
+hgroup.noob h3{color:#76879b;font-size:10px;margin:0 5px 5px 5px;font-family:"Lucida Grande",Verdana,Helvetica,Arial,sans-serif;font-size:11px;clear:both;text-align:right;line-height:3px;}
 button.sky{background:#34d8ec;background-image:-moz-linear-gradient(top, #36e0f5, #30c8da 95%, #32cfe2);background-image:-webkit-gradient(linear, left top, left bottom, from(#36e0f5), color-stop(0.95, #30c8da), to(#32cfe2));background-image:-webkit-linear-gradient(top, from(#36e0f5), color-stop(0.95, #30c8da), to(#32cfe2));background-image:-o-linear-gradient(top, #36e0f5 0%, #30c8da 95%, #32cfe2 100%);filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#36e0f5, endColorstr=#32cfe2)";-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#36e0f5, endColorstr=#32cfe2)";background-image:linear-gradient(top, #36e0f5 0%, #30c8da 95%, #32cfe2 100%);border:1px solid #4ee4f6;-webkit-box-shadow:0px 0px 20px #36e0f5;-moz-box-shadow:0px 0px 20px #36e0f5;box-shadow:0px 0px 20px #36e0f5;text-shadow:none;}
 button.lime{background:#83ee20;background-image:-moz-linear-gradient(top, #86f521, #79dc1e 95%, #7fe71f);background-image:-webkit-gradient(linear, left top, left bottom, from(#86f521), color-stop(0.95, #79dc1e), to(#7fe71f));background-image:-webkit-linear-gradient(top, from(#86f521), color-stop(0.95, #79dc1e), to(#7fe71f));background-image:-o-linear-gradient(top, #86f521 0%, #79dc1e 95%, #7fe71f 100%);filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#86f521, endColorstr=#7fe71f)";-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#86f521, endColorstr=#7fe71f)";background-image:linear-gradient(top, #86f521 0%, #79dc1e 95%, #7fe71f 100%);border:1px solid #93f639;-webkit-box-shadow:0px 0px 20px #86f521;-moz-box-shadow:0px 0px 20px #86f521;box-shadow:0px 0px 20px #86f521;text-shadow:none;}
 .sexy.green{background:#84c348;background-image:-moz-linear-gradient(top, #84c348, #99cd67 90%, #84c348);background-image:-webkit-gradient(linear, left top, left bottom, from(#84c348), color-stop(0.9%, #99cd67), to(#84c348));background-image:-webkit-linear-gradient(top, from(#84c348), color-stop(0.9%, #99cd67), to(#84c348));background-image:-o-linear-gradient(top, #84c348 0%, #99cd67 90%, #84c348 100%);filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#84c348, endColorstr=#84c348)";-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#84c348, endColorstr=#84c348)";background-image:linear-gradient(top, #84c348 0%, #99cd67 90%, #84c348 100%);}.sexy.green:hover{border:1px solid rgba(0, 0, 0, 0.7);background:#436521;background-image:-moz-linear-gradient(top, #436521, #5c8c2e 90%, #436521);background-image:-webkit-gradient(linear, left top, left bottom, from(#436521), color-stop(0.9%, #5c8c2e), to(#436521));background-image:-webkit-linear-gradient(top, from(#436521), color-stop(0.9%, #5c8c2e), to(#436521));background-image:-o-linear-gradient(top, #436521 0%, #5c8c2e 90%, #436521 100%);filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#436521, endColorstr=#436521)";-ms-filter:"progid:DXImageTransform.Microsoft.gradient(startColorstr=#436521, endColorstr=#436521)";background-image:linear-gradient(top, #436521 0%, #5c8c2e 90%, #436521 100%);-webkit-box-shadow:inset 0px 0px 1px 0px #000000;-moz-box-shadow:inset 0px 0px 1px 0px #000000;box-shadow:inset inner 0px 0px 1px 0px #000000;}
@@ -308,8 +308,8 @@ fieldset.sexyform input.success:after{content:"\2714";}
 .sexyshadow{min-width:150px;background:#ddd;margin:60px auto;text-align:center;position:relative;padding:1.9em 1.5em;color:rgba(0, 0, 0, 0.8);border:none;-webkit-background-clip:padding-box;-webkit-border-radius:3px;-moz-background-clip:padding-box;-moz-border-radius:3px;border-radius:3px;background-clip:padding-box;text-shadow:#ffffff 0 1px 0;}
 .sexyshadow:before,.sexyshadow:after{z-index:-1;position:absolute;content:"";bottom:15px;left:10px;width:50%;top:75%;max-width:300px;background:rgba(0, 0, 0, 0.6);-webkit-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);-moz-box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);box-shadow:0 15px 10px rgba(0, 0, 0, 0.7);-webkit-transform:rotate(-3deg);-moz-transform:rotate(-3deg);-o-transform:rotate(-3deg);transform:rotate(-3deg);}
 .sexyshadow:after{-webkit-transform:rotate(3deg);-moz-transform:rotate(3deg);-o-transform:rotate(3deg);transform:rotate(3deg);right:10px;left:auto;}
-@media only screen and (min-width: 1224px){}@media only screen and (min-width: 992px) and (max-device-width:1024px){}@media only screen and (min-width: 480px) and (max-width: 800px){}@media only screen and (orientation : landscape) and (min-device-width : 768px) and (max-device-width : 1024px){}@media only screen and (orientation : portrait) and (min-device-width : 768px) and (max-device-width : 1024px){}html{overflow-x:hidden;overflow-y:auto;width:100%;height:100%;}
-body{min-height:100%;padding:0;-webkit-text-size-adjust:100%;text-rendering:optimizeLegibility;}
+@media only screen and (min-width: 1224px){}@media only screen and (min-width: 992px) and (max-device-width:1024px){}@media only screen and (min-width: 480px) and (max-width: 800px){}@media only screen and (orientation : landscape) and (min-device-width : 768px) and (max-device-width : 1024px){}@media only screen and (orientation : portrait) and (min-device-width : 768px) and (max-device-width : 1024px){}@media only screen and (max-width: 801px){#site{padding:0 5px;} .col{width:100%;} .p1,.p2,.p3,.p4,.p5,.p6,.p7,.p8,.p9,.p10,.p11,.p12,.p13,.p14,.p15,.device-hide{display:none;} .col.half{width:48.77%;} .col.third{width:31.65%;}}html{overflow-x:hidden;overflow-y:auto;width:100%;height:100%;}
+body{min-height:100%;padding:0;-webkit-text-size-adjust:100%;text-rendering:optimizeLegibility;font-size:1em;}
 #site{z-index:2;margin:0 auto;position:relative;max-width:100%;width:960px;height:100%;background-color:#ffffff;-webkit-box-sizing:border-box;-moz-box-sizing:border-box;box-sizing:border-box;}
 a{color:#555555;}a:hover{color:#3b3b3b;}
 section{margin-bottom:80px;}
