--- a/less/_reset.less
+++ b/less/_reset.less
@@ -45,6 +45,6 @@ abbr[title], dfn[title] { border-bottom:1px dotted; cursor:help; }
 /* tables still need cellspacing="0" in the markup */
 table { border-collapse:collapse; border-spacing:0; }
 
-hr { display:block; height:1px; border:0; border-top:1px solid #ccc; margin:1em 0; padding:0; clear:both; }
+hr { display:block; height:1px; border:0; border-top:1px solid #ccc; margin:0 0 1em; padding:0; clear:both; }
 
 input, select { vertical-align:middle; }
