--- a/less/_formtable.less
+++ b/less/_formtable.less
@@ -92,7 +92,7 @@ form div.error { background:#fbe3e4; color:#8a1f11; padding:0.7em; margin-bottom
 /* Table
 ---------------------------------------- */
 
-table {
+table.line {
     margin:5% auto 0;
     color:@grey;
         /* stripe */
