--- a/less/_layout.less
+++ b/less/_layout.less
@@ -1,18 +1,19 @@
-/* site containers layout 
+/* -------------------------------------
+        site containers layout 
 ---------------------------------------- */
 #sitebase {
-
     .html ( @xflow: hidden, @yflow: auto ) {
-        overflow-x:@xflow;
-        overflow-y:@yflow;
-        width:100%; height:100%;
+        overflow-x:  @xflow;
+        overflow-y:  @yflow;
+        width:       100%;
+        height:      100%;
     }
 
     .body (@h:100%, @padding: 0) {
-        min-height:@h;
-        padding:         @padding;
-        -webkit-text-size-adjust: 100%;
-        text-rendering:  optimizeLegibility;
+        min-height:                @h;
+        padding:                   @padding;
+        -webkit-text-size-adjust:  100%;
+        text-rendering:            optimizeLegibility;
     }
 
     .site (@siteWidth:960px, @siteHeight: 100%, @siteBgColor: #fff) {
@@ -79,4 +80,3 @@ ol ol ol { counter-reset: olthird; /* our sub OL's reset the olsecond, third mus
     ol,ul { margin:10px 0 10px 10px; }
     ul { list-style-type:disc; }
 }
-
