--- a/less/_font.less
+++ b/less/_font.less
@@ -21,16 +21,15 @@ sup   { font-size:xx-small;  vertical-align:text-top;     margin:0px 2px }
 sub   { font-size:xx-small;  vertical-align:text-bottom;  margin:0px 2px }
 
 /* consistent margin */
-h1, h2, h3, h4, h5, h6, i, em, a
+h1, h2, h3, h4, h5, h6, i, em, a,
 p, ul, ol, pre, blockquote,
 textarea, button, strong, small,
 .huge, .h1,.h2,.h3,.h4,.h5,.h6 
-{ margin: 5px 0 15px }
+{ margin: 5px 0 10px }
 
 
-/* ================== //
-// =    fonts       = //
-// ================== */
+/* fonts
+============================ */
 p.twisted {
 color: #424242;
 font-family: "Adobe Caslon Pro", "Hoefler Text", Georgia, Garamond, Times, serif;
