--- a/less/_mixin.less
+++ b/less/_mixin.less
@@ -1,34 +1,33 @@
-/*
- * #border      > .border-radius    ( radius                                                                              );
- *              > .multi-radius     ( topleft, topright, bottom right, bottom left                                        );
- *
- * #shadow      > .box-shadow       ( horz:0px, vert:1px, blur:2px, color:#ccc                                            );
- *              > .inset-box-shadow ( horz:0px, vert:1px, blur:2px,offset:0, color:#ccc                                   );
- *              > .test-shadow      ( color:#ccc, @arg: 0px 0px 20px                                                      );
- *
- * #gradient    > .v                ( colorstart:#efefef, colorend:595959                                                 );
- *              > .h                ( colorstart:#efefef, colorend:595959                                                 );
- *              > .v3               ( colorstart:, colormiddle, middleposition, colorend                                  );
- *              > .h3               ( colorstart:, colormiddle, middleposition, colorend                                  );
- *              > .v4               ( colorstart:, color2, pos2, color3, pos3, colorend                                   );
- *              > .h4               ( colorstart:, color2, pos2, color3, pos3, colorend                                   );
- *
- * #animate     > .transition       ( property[width], duration[2s], timing[linear, ease, ease-in, ease-out, ], delay[2s] );
- *              > .transform        ( @val                                                                                );
- *              > .skew             ( angle x:35, angle y:0                                                               );
- *              > .scale            ( scale-x:1                                                                           );
- *              > .rotate           ( angle:35                                                                            );
- *              > .translate        ( move-x:10px, move-7:10px                                                            );
- *
- * #transparent > .background       ( color: @white; @alpha:1                                                             );
- *              > .border           ( color:@white, alpha:1                                                               );
- *              > .opacity          ( 100                                                                    ); this is in %
- *
- *  .box-sizing ( @val:border-box );
- *  .size ( width:5px, height:5px );
- *  .content-columns ( count, gap );
- */
-
+// /*
+//  * #border      > .border-radius    ( radius                                                                              );
+//  *              > .multi-radius     ( topleft, topright, bottom right, bottom left                                        );
+//  *
+//  * #shadow      > .box-shadow       ( horz:0px, vert:1px, blur:2px, color:#ccc                                            );
+//  *              > .inset-box-shadow ( horz:0px, vert:1px, blur:2px,offset:0, color:#ccc                                   );
+//  *              > .test-shadow      ( color:#ccc, @arg: 0px 0px 20px                                                      );
+//  *
+//  * #gradient    > .v                ( colorstart:#efefef, colorend:595959                                                 );
+//  *              > .h                ( colorstart:#efefef, colorend:595959                                                 );
+//  *              > .v3               ( colorstart:, colormiddle, middleposition, colorend                                  );
+//  *              > .h3               ( colorstart:, colormiddle, middleposition, colorend                                  );
+//  *              > .v4               ( colorstart:, color2, pos2, color3, pos3, colorend                                   );
+//  *              > .h4               ( colorstart:, color2, pos2, color3, pos3, colorend                                   );
+//  *
+//  * #animate     > .transition       ( property[width], duration[2s], timing[linear, ease, ease-in, ease-out, ], delay[2s] );
+//  *              > .transform        ( @val                                                                                );
+//  *              > .skew             ( angle x:35, angle y:0                                                               );
+//  *              > .scale            ( scale-x:1                                                                           );
+//  *              > .rotate           ( angle:35                                                                            );
+//  *              > .translate        ( move-x:10px, move-7:10px                                                            );
+//  *
+//  * #transparent > .background       ( color: @white; @alpha:1                                                             );
+//  *              > .border           ( color:@white, alpha:1                                                               );
+//  *              > .opacity          ( 100                                                                    ); this is in %
+//  *
+//  *  .box-sizing ( @val:border-box );
+//  *  .size ( width:5px, height:5px );
+//  *  .content-columns ( count, gap );
+//  */
 
 
 #border {
