--- a/less/_modules.less
+++ b/less/_modules.less
@@ -37,9 +37,8 @@
   }
 }
 
-// ========================= //
-// =    button             = //
-// ========================= //
+/* button
+============================== */
 
 /* 
  * button: .button ( color:#f5f5f5, textcolor:333, paddding: 9px 10px 0 10px, borderradius:6px )
