--- a/less/_nav.less
+++ b/less/_nav.less
@@ -1,8 +1,8 @@
 // pagination
 // topbar + botbar, dark + light
 
-
-/* ------------ pagination ------------ */
+/* pagination 
+================================== */
 .pagination {
     a { padding:5px; float:left; }
     a:hover, a.selected {
