--- a/less/_plugin_font_hgroup.less
+++ b/less/_plugin_font_hgroup.less
@@ -1,8 +1,6 @@
-/* ================== //
-// =    hgroups     = //
-// ================== */
-/*
- * coudal
+/* hgroups
+============================ */
+/* coudal
  * timoni
  * ale
  * noob
