--- a/less/_media.less
+++ b/less/_media.less
@@ -1,15 +1,18 @@
-/* ================== //
-// =  media screen  = //
-// ================== */
+/* media screen
+===================== */
 
-/* --- 1280 laptop/desktop -- */ @media only screen and (min-width: 1224px) { }
-/* --- 1024 netbook --------- */ @media only screen and (min-width: 992px) and (max-device-width:1024px) { }
 /* --- 480px mobile --------- */ @media only screen and (min-width: 480px) and (max-width: 800px) { }
 /* --- iPads (landscape) ---- */ @media only screen and (orientation : landscape) and (min-device-width : 768px) and (max-device-width : 1024px) { } 
 /* --- iPads (portrait) ----- */ @media only screen and (orientation : portrait) and (min-device-width : 768px) and (max-device-width : 1024px) { } 
 
+/* desktop from 800 width and up */
+    .device-hide { display:block }   // hide element for device    
+    .device-show { display:none  }   // hide element for device    
+
 /* --- mobile -- */ @media only screen and (max-width: 801px) {
     
     #site { padding:0 5px; }
+    .device-hide { display:none  }   // hide element for device    
+    .device-show { display:block }   // hide element for device    
 
 } // max 801
